[project]
name = "the200-chat"
version = "0.1.0"
description = "Streaming AI travel chatbot for The 200 blog"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sse-starlette==2.1.3",
    "anthropic==0.42.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "mypy==1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# SYSTEM_PROMPT is a multi-line verbatim string — wrapping changes its content.
"app/llm.py" = ["E501"]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "sse_starlette.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
